Running on Ubuntu 22.04

--- a/.github/workflows/multiarch-containerfile-build.yaml
+++ b/.github/workflows/multiarch-containerfile-build.yaml
@@ -29,7 +29,7 @@ defaults:
 jobs:
   multiarch-build:
     name: Build images
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v2
 
