--- a/.github/workflows/multiarch-containerfile-build.yaml
+++ b/.github/workflows/multiarch-containerfile-build.yaml
@@ -66,7 +66,7 @@ jobs:
 
       - name: Push To ${{ inputs.registry }}
         id: push-to-quay
-        if: env.PRINCIPAL != ':'
+        if: github.event_name == 'push' && env.PRINCIPAL != ':'
         uses: redhat-actions/push-to-registry@v2
         with:
           image: ${{ steps.build-image.outputs.image }}
