--- a/config/eventing.yaml
+++ b/config/eventing.yaml
@@ -29,8 +29,8 @@ repositories:
         - ".*e2e$"
         - ".*reconciler.*"
         - ".*conformance.*"
-  - org: openshift
-    repo: knative-eventing
+  - org: openshift-knative
+    repo: eventing
     imagePrefix: knative-eventing
     slackChannel: "#knative-eventing-ci"
     e2e:
