--- a/config/eventing.yaml
+++ b/config/eventing.yaml
@@ -14,6 +14,10 @@ config:
       openShiftVersions:
         - 4.11
         - 4.8
+    "release-v1.7":
+      openShiftVersions:
+        - 4.11
+        - 4.8
     "release-next":
       openShiftVersions:
         - 4.11
