--- a/config/eventing.yaml
+++ b/config/eventing.yaml
@@ -18,6 +18,10 @@ config:
       openShiftVersions:
         - 4.11
         - 4.8
+    "release-v1.8":
+      openShiftVersions:
+        - 4.11
+        - 4.8
     "release-next":
       openShiftVersions:
         - 4.11
