Add knative eventing 1.8 branch (#13)
* Create extra config for eventing-kafka-broker

In some cases the branches between the kafka-broker and eventing are not
aligned. For example: the release-v1.8 existed only in eventing at the
beginning and not for the broker.
Therefor we created two configs to be able to create the CI config for
each branch.

Signed-off-by: Christoph Stäbler <cstabler@redhat.com>

* Add 1.8 branch for eventing

Signed-off-by: Christoph Stäbler <cstabler@redhat.com>

Signed-off-by: Christoph Stäbler <cstabler@redhat.com>

--- a/config/eventing-kafka-broker.yaml
+++ b/config/eventing-kafka-broker.yaml
@@ -18,10 +18,6 @@ config:
       openShiftVersions:
         - 4.11
         - 4.8
-    "release-v1.8":
-      openShiftVersions:
-        - 4.11
-        - 4.8
     "release-next":
       openShiftVersions:
         - 4.11
@@ -29,8 +25,8 @@ config:
 
 repositories:
   - org: openshift-knative
-    repo: eventing
-    imagePrefix: knative-eventing
+    repo: eventing-kafka-broker
+    imagePrefix: knative-eventing-kafka-broker
     slackChannel: "#knative-eventing-ci"
     e2e:
       matches:
