--- a/config/eventing.yaml
+++ b/config/eventing.yaml
@@ -22,6 +22,10 @@ config:
       openShiftVersions:
         - 4.12
         - 4.8
+    "release-v1.9":
+      openShiftVersions:
+        - 4.12
+        - 4.8
     "release-next":
       openShiftVersions:
         - 4.12
