Add project.yaml / project metadata and images.yaml comments
Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>

--- a/pkg/project/testdata/project.yaml
+++ b/pkg/project/testdata/project.yaml
@@ -1,3 +1,6 @@
+# This is an example project.yaml
+#
+# See comment on Metadata in pkg/project/project.yaml
 project:
   tag: knative-v1.8
   imagePrefix: knative
