--- a/.github/workflows/go-unit-tests.yaml
+++ b/.github/workflows/go-unit-tests.yaml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ "main" ]
   pull_request:
-    types: [ "opened", "reopened" ]
+    branches: [ "main" ]
 
 jobs:
   go-unit-tests:
