--- a/pkg/project/testoutput/openshift/images.yaml
+++ b/pkg/project/testoutput/openshift/images.yaml
@@ -1,3 +1,4 @@
 github.com/openshift-knative/hack/cmd/generate: hello
 github.com/openshift-knative/hack/cmd/prowgen: registry.ci.openshift.org/openshift/knative-prowgen:knative-v1.8
 github.com/openshift-knative/hack/cmd/testselect: registry.ci.openshift.org/openshift/knative-test-testselect:knative-v1.8
+knative.dev/eventing/cmd/foo: bar
