Optional job for hyperfoil benchmark

--- a/config/eventing-hyperfoil-benchmark.yaml
+++ b/config/eventing-hyperfoil-benchmark.yaml
@@ -14,3 +14,5 @@ repositories:
     e2e:
       matches:
         - ".*test-kafka-broker-upstream-.*"
+      onDemand:
+        - ".*test-kafka-broker-namespaced-midstream-.*"
