Starting to add Eventin 1.10 core for CI and images
Signed-off-by: Matthias Wessendorf <mwessend@redhat.com>

--- a/config/eventing.yaml
+++ b/config/eventing.yaml
@@ -18,6 +18,10 @@ config:
       openShiftVersions:
         - 4.12
         - 4.10
+    "release-v1.1-":
+      openShiftVersions:
+        - 4.12
+        - 4.10
     "release-next":
       openShiftVersions:
         - 4.12
