--- a/config/eventing.yaml
+++ b/config/eventing.yaml
@@ -18,7 +18,7 @@ config:
       openShiftVersions:
         - 4.12
         - 4.10
-    "release-v1.1-":
+    "release-v1.10":
       openShiftVersions:
         - 4.12
         - 4.10
