Add eventing-istio v1.9
Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>

--- a/config/eventing-istio.yaml
+++ b/config/eventing-istio.yaml
@@ -6,6 +6,10 @@ config:
       openShiftVersions:
         - 4.12
         - 4.10
+    "release-v1.9":
+      openShiftVersions:
+        - 4.12
+        - 4.10
 
 repositories:
   - org: openshift-knative
