use hack-repository for net-istio and net-kourier

--- a/config/serving-net-istio.yaml
+++ b/config/serving-net-istio.yaml
@@ -2,11 +2,11 @@
 
 config:
   branches:
-    "release-1.9":
+    "release-v1.9":
       openShiftVersions:
         - 4.12
         - 4.10
-    "release-1.10":
+    "release-v1.10":
       openShiftVersions:
         - 4.12
         - 4.10
