Add eventing-istio release-next tests
Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>

--- a/config/eventing-istio.yaml
+++ b/config/eventing-istio.yaml
@@ -10,6 +10,10 @@ config:
       openShiftVersions:
         - 4.12
         - 4.10
+    "release-next":
+      openShiftVersions:
+        - 4.12
+        - 4.10
 
 repositories:
   - org: openshift-knative
