--- a/pkg/project/testoutput/openshift/ci-operator/knative-images/prowcopy/Dockerfile
+++ b/pkg/project/testoutput/openshift/ci-operator/knative-images/prowcopy/Dockerfile
@@ -1,12 +1,12 @@
-# DO NOT EDIT! Generated Dockerfile for cmd/prowgen.
+# DO NOT EDIT! Generated Dockerfile for cmd/prowcopy.
 FROM registry.ci.openshift.org/openshift/release:golang-1.18 as builder
 
 COPY . .
 
 RUN mkdir -p /var/run/ko && \
-    mkdir -p cmd/prowgen/kodata && \
-    go build -o /usr/bin/main ./cmd/prowgen && \
-    cp -r cmd/prowgen/kodata /var/run/ko
+    mkdir -p cmd/prowcopy/kodata && \
+    go build -o /usr/bin/main ./cmd/prowcopy && \
+    cp -r cmd/prowcopy/kodata /var/run/ko
 
 FROM registry.access.redhat.com/ubi8/ubi-minimal
 
