Workaround for create-pull-request action branch fetch issue
Workaround for https://github.com/openshift-knative/hack/pull/63#issuecomment-1617894657

Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>

--- a/.github/workflows/release-generate-ci.yaml
+++ b/.github/workflows/release-generate-ci.yaml
@@ -51,7 +51,8 @@ jobs:
 
       - name: Generate CI
         working-directory: ./src/github.com/openshift-knative/hack
-        run: make generate-ci-no-clean
+        # Use master, see https://github.com/peter-evans/create-pull-request/issues/2108
+        run: make generate-ci-no-clean ARGS=--branch=master
 
       - name: Create Pull Request
         if: (github.event_name == 'push' || github.event_name == 'workflow_dispatch') && github.ref_name == 'main'
