--- a/config/serving.yaml
+++ b/config/serving.yaml
@@ -17,6 +17,11 @@ config:
       openShiftVersions:
         - 4.13
         - 4.10
+    "release-v1.11":
+      cron: "0 1 * * 1-5"
+      openShiftVersions:
+        - 4.13
+        - 4.10
     "release-next":
       cron: "0 8 * * 1-5"
       openShiftVersions:
