Checkout the correct branch
Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>

--- a/.github/workflows/run-command-repository.yaml
+++ b/.github/workflows/run-command-repository.yaml
@@ -42,6 +42,7 @@ jobs:
         with:
           repository: '${{ inputs.repository }}'
           path: "./src/github.com/${{ inputs.repository }}"
+          ref: "${{ inputs.branch }}"
 
       - name: Configure Git user
         run: |
