--- a/cmd/generate/SourceImageDockerfile.template
+++ b/cmd/generate/SourceImageDockerfile.template
@@ -2,4 +2,4 @@
 
 FROM src
 
-RUN chmod +x vendor/k8s.io/code-generator/generate-groups.sh vendor/knative.dev/pkg/hack/generate-knative.sh
+RUN chmod +x vendor/k8s.io/code-generator/generate-groups.sh vendor/knative.dev/pkg/hack/generate-knative.sh || true
