Prevent from deleting config file with unit tests

--- a/config/serverless-operator.yaml
+++ b/config/serverless-operator.yaml
@@ -21,6 +21,7 @@ repositories:
     slackChannel: "#serverless-ci"
     ignoreConfigs:
       matches:
+        - ".*main.yaml$"
         - ".*aws-ovn.*"
         - ".*azure.*"
         - ".*gcp.*"
