--- a/config/eventing-hyperfoil-benchmark.yaml
+++ b/config/eventing-hyperfoil-benchmark.yaml
@@ -4,7 +4,7 @@ config:
   branches:
     "main":
       openShiftVersions:
-        - 4.12
+        - version: 4.12
 
 repositories:
   - org: openshift-knative
