--- a/config/serving-net-istio.yaml
+++ b/config/serving-net-istio.yaml
@@ -4,20 +4,20 @@ config:
   branches:
     "release-v1.9":
       openShiftVersions:
-        - 4.13
-        - 4.10
+        - version: 4.13
+        - version: 4.10
     "release-v1.10":
       openShiftVersions:
-        - 4.14
-        - 4.11
+        - version: 4.14
+        - version: 4.11
     "release-v1.11":
       openShiftVersions:
-        - 4.14
-        - 4.11
+        - version: 4.14
+        - version: 4.11
     "release-v1.12":
       openShiftVersions:
-        - 4.14
-        - 4.11
+        - version: 4.14
+        - version: 4.11
 
 repositories:
   - org: openshift-knative
