--- a/config/eventing-hyperfoil-benchmark.yaml
+++ b/config/eventing-hyperfoil-benchmark.yaml
@@ -12,7 +12,7 @@ repositories:
     imagePrefix: knative-eventing-hyperfoil-benchmark
     slackChannel: "#knative-eventing-ci"
     e2e:
-      - regexp: ".*test-kafka-broker-upstream-.*"
-      - regexp: ".*test-kafka-broker-namespaced-midstream-.*"
+      - match: ".*test-kafka-broker-upstream-.*"
+      - match: ".*test-kafka-broker-namespaced-midstream-.*"
         onDemand: true
 
