--- a/config/eventing-kafka-broker.yaml
+++ b/config/eventing-kafka-broker.yaml
@@ -37,6 +37,6 @@ repositories:
     imagePrefix: knative-eventing-kafka-broker
     slackChannel: "#knative-eventing-ci"
     e2e:
-      - regexp: ".*e2e$"
-      - regexp: ".*reconciler.*"
-      - regexp: ".*conformance.*"
+      - match: ".*e2e$"
+      - match: ".*reconciler.*"
+      - match: ".*conformance.*"
