make Serving perf tests run on demand

--- a/config/serving.yaml
+++ b/config/serving.yaml
@@ -38,6 +38,7 @@ repositories:
       matches:
         - ".*e2e$"
         - ".*e2e-tls$"
+      onDemand:
         - "perf-tests$"
     resources:
       '*':
