Serving Perf tests on demand

--- a/config/serving.yaml
+++ b/config/serving.yaml
@@ -38,6 +38,7 @@ repositories:
       - match: ".*e2e$"
       - match: ".*e2e-tls$"
       - match: "perf-tests$"
+        onDemand: true
     resources:
       '*':
         requests:
