add image dep skip rule

--- a/config/serving.yaml
+++ b/config/serving.yaml
@@ -39,6 +39,19 @@ repositories:
       - match: ".*e2e-tls$"
       - match: "perf-tests$"
         onDemand: true
+        filterImages:
+          "perf-test":
+            - "knative-serving-load-test"
+            - "knative-serving-dataplane-probe"
+            - "knative-serving-real-traffic-test"
+            - "knative-serving-reconciliation-delay"
+            - "knative-serving-rollout-probe"
+            - "knative-serving-scale-from-zero"
+    dockerfiles:
+      matches:
+        - "openshift/ci-operator/knative-images.*",
+        - "openshift/ci-operator/knative-test-images.*",
+        - "openshift/ci-operator/knative-perf-images.*",
     resources:
       '*':
         requests:
