Generate CI config for openshift-knative/serverless-operator (#84)
* Allign BuildImageDockerfile template between s-o and midstream repos

Install additional tools/libs that are required by serverless-operator
build.

* Process dockerfiles from serverless-operator

* Option to override promotion namespace,name,tag

* Do not specify tag or name

* Fix dockerfile paths and makefile selection

* Jobs on demand

* Full support for always_run, run_if_changed, optional

These can be set separately for each test pattern.

* Support Cron setting for each OpenShift version separately

* Alow to skip cron job generation

* OpenShift version can enforce all preSubmit jobs to be on demand

* Option to keep old configs matching patterns

* Remove redundant packages

* Generate for main branch of serverless-operator

* Do not delete old configs

* Prevent from deleting config file with unit tests

* Fix make targets

* Revert "Allign BuildImageDockerfile template between s-o and midstream repos"

This reverts commit 44f273fba8ad65a32a8813fb7eecf6c90cd3ef7b.

* Specify version: under openShiftVersions in config

* Use e2e.match instead of e2e.regexp

* Remvoe redundant comment

* Add unit tests

* Run periodics only once a day

* Serving Perf tests on demand

* Fix rebase

* Remove debug outputs

* Fix redundant import

--- a/config/eventing-istio.yaml
+++ b/config/eventing-istio.yaml
@@ -4,24 +4,24 @@ config:
   branches:
     "release-v1.8":
       openShiftVersions:
-        - 4.13
-        - 4.10
+        - version: 4.13
+        - version: 4.10
     "release-v1.9":
       openShiftVersions:
-        - 4.13
-        - 4.10
+        - version: 4.13
+        - version: 4.10
     "release-v1.10":
       openShiftVersions:
-        - 4.13
-        - 4.11
+        - version: 4.13
+        - version: 4.11
     "release-v1.11":
       openShiftVersions:
-        - 4.13
-        - 4.11
+        - version: 4.13
+        - version: 4.11
     "release-next":
       openShiftVersions:
-        - 4.13
-        - 4.11
+        - version: 4.13
+        - version: 4.11
 
 repositories:
   - org: openshift-knative
@@ -29,5 +29,4 @@ repositories:
     imagePrefix: knative-eventing-istio
     slackChannel: "#knative-eventing-ci"
     e2e:
-      matches:
-        - ".*e2e-tests$"
+      - match: ".*e2e-tests$"
