--- a/config/eventing-hyperfoil-benchmark.yaml
+++ b/config/eventing-hyperfoil-benchmark.yaml
@@ -4,7 +4,7 @@ config:
   branches:
     "main":
       openShiftVersions:
-        - 4.12
+        - version: 4.12
 
 repositories:
   - org: openshift-knative
@@ -12,7 +12,7 @@ repositories:
     imagePrefix: knative-eventing-hyperfoil-benchmark
     slackChannel: "#knative-eventing-ci"
     e2e:
-      matches:
-        - ".*test-kafka-broker-upstream-.*"
-      onDemand:
-        - ".*test-kafka-broker-namespaced-midstream-.*"
+      - match: ".*test-kafka-broker-upstream-.*"
+      - match: ".*test-kafka-broker-namespaced-midstream-.*"
+        onDemand: true
+
