--- a/config/eventing-istio.yaml
+++ b/config/eventing-istio.yaml
@@ -2,10 +2,6 @@
 
 config:
   branches:
-    "release-v1.8":
-      openShiftVersions:
-        - version: 4.13
-        - version: 4.10
     "release-v1.9":
       openShiftVersions:
         - version: 4.13
@@ -26,6 +22,8 @@ config:
 repositories:
   - org: openshift-knative
     repo: eventing-istio
+    promotion:
+      namespace: openshift
     imagePrefix: knative-eventing-istio
     slackChannel: "#knative-eventing-ci"
     e2e:
