--- a/config/eventing.yaml
+++ b/config/eventing.yaml
@@ -2,18 +2,6 @@
 
 config:
   branches:
-    "release-v1.6":
-      openShiftVersions:
-        - version: 4.12
-        - version: 4.8
-    "release-v1.7":
-      openShiftVersions:
-        - version: 4.12
-        - version: 4.8
-    "release-v1.8":
-      openShiftVersions:
-        - version: 4.13
-        - version: 4.10
     "release-v1.9":
       openShiftVersions:
         - version: 4.13
@@ -34,6 +22,8 @@ config:
 repositories:
   - org: openshift-knative
     repo: eventing
+    promotion:
+      namespace: openshift
     imagePrefix: knative-eventing
     slackChannel: "#knative-eventing-ci"
     e2e:
