--- a/config/serving.yaml
+++ b/config/serving.yaml
@@ -19,6 +19,10 @@ config:
         - version: 4.14
         - version: 4.11
     "release-next":
+      skipE2EMatches:
+        - "perf-tests$"
+      skipDockerFilesMatches:
+        - "openshift/ci-operator/knative-perf-images.*"
       openShiftVersions:
         - version: 4.14
         - version: 4.11
