--- a/config/eventing-kafka-broker.yaml
+++ b/config/eventing-kafka-broker.yaml
@@ -4,20 +4,20 @@ config:
   branches:
     "release-v1.9":
       openShiftVersions:
-        - version: 4.13
-        - version: 4.10
+        - version: "4.13"
+        - version: "4.10"
     "release-v1.10":
       openShiftVersions:
-        - version: 4.14
-        - version: 4.11
+        - version: "4.14"
+        - version: "4.11"
     "release-v1.11":
       openShiftVersions:
-        - version: 4.14
-        - version: 4.11
+        - version: "4.14"
+        - version: "4.11"
     "release-next":
       openShiftVersions:
-        - version: 4.14
-        - version: 4.11
+        - version: "4.14"
+        - version: "4.11"
 
 repositories:
   - org: openshift-knative
