Use openshift-knative instead of mgencur org

--- a/config/serverless-operator.yaml
+++ b/config/serverless-operator.yaml
@@ -12,7 +12,7 @@ config:
           onDemand: true
 
 repositories:
-  - org: mgencur
+  - org: openshift-knative
     repo: serverless-operator
     promotion:
       namespace: knative
