increase timeout to 5h from the default 4h for mesh jobs

--- a/config/serverless-operator.yaml
+++ b/config/serverless-operator.yaml
@@ -45,6 +45,7 @@ repositories:
       - match: "^mesh-e2e$"
         onDemand: true
         ignoreError: true
+        timeout: 4h0m0s
       - match: "^mesh-upgrade$"
         onDemand: true
         ignoreError: true
