--- a/config/eventing-istio.yaml
+++ b/config/eventing-istio.yaml
@@ -18,6 +18,10 @@ config:
       openShiftVersions:
         - version: "4.14"
         - version: "4.11"
+    "release-v1.13":
+      openShiftVersions:
+        - version: "4.14"
+        - version: "4.11"
     "release-next":
       openShiftVersions:
         - version: "4.14"
