--- a/.github/workflows/release-generate-ci.yaml
+++ b/.github/workflows/release-generate-ci.yaml
@@ -19,11 +19,6 @@ jobs:
     env:
       GOPATH: ${{ github.workspace }}
     steps:
-      - name: Setup Golang
-        uses: actions/setup-go@v2
-        with:
-          go-version-file: go.mod
-
       - name: Install prerequisites
         env:
           YQ_VERSION: 3.4.0
@@ -36,6 +31,11 @@ jobs:
         uses: actions/checkout@v3
         with:
           path: ./src/github.com/openshift-knative/hack
+
+      - name: Setup Golang
+        uses: actions/setup-go@v2
+        with:
+          go-version-file: ./src/github.com/openshift-knative/hack/go.mod
 
       - name: Checkout openshift/release
         uses: actions/checkout@v3
