Change default Go base image
Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>

--- a/pkg/project/testoutput/openshift/ci-operator/knative-images/prowgen/Dockerfile
+++ b/pkg/project/testoutput/openshift/ci-operator/knative-images/prowgen/Dockerfile
@@ -1,5 +1,5 @@
 # DO NOT EDIT! Generated Dockerfile for cmd/prowgen.
-FROM registry.ci.openshift.org/openshift/release:golang-1.21 as builder
+FROM registry.ci.openshift.org/openshift/release:rhel-8-release-golang-1.21-openshift-4.16 as builder
 
 COPY . .
 
