--- a/config/eventing-kafka-broker.yaml
+++ b/config/eventing-kafka-broker.yaml
@@ -1,36 +1,35 @@
-# Full struct in cmd/prowgen/prowgen.go#Config
-
 config:
   branches:
-    "release-v1.10":
+    release-next:
       openShiftVersions:
-        - version: "4.14"
-        - version: "4.11"
-    "release-v1.11":
+      - version: "4.14"
+      - version: "4.11"
+    release-v1.10:
       openShiftVersions:
-        - version: "4.14"
-        - version: "4.11"
-    "release-v1.12":
+      - version: "4.14"
+      - version: "4.11"
+    release-v1.11:
       openShiftVersions:
-        - version: "4.14"
-        - version: "4.11"
-    "release-v1.13":
+      - version: "4.14"
+      - version: "4.11"
+    release-v1.12:
       openShiftVersions:
-        - version: "4.14"
-        - version: "4.11"
-    "release-next":
+      - version: "4.14"
+      - version: "4.11"
+    release-v1.13:
       openShiftVersions:
-        - version: "4.14"
-        - version: "4.11"
-
+      - version: "4.14"
+      - version: "4.11"
 repositories:
-  - org: openshift-knative
-    repo: eventing-kafka-broker
-    promotion:
-      namespace: openshift
-    imagePrefix: knative-eventing-kafka-broker
-    slackChannel: "#knative-eventing-ci"
-    e2e:
-      - match: ".*e2e$"
-      - match: ".*reconciler.*"
-      - match: ".*conformance.*"
+- dockerfiles: {}
+  e2e:
+  - match: .*e2e$
+  - match: .*reconciler.*
+  - match: .*conformance.*
+  ignoreConfigs: {}
+  imagePrefix: knative-eventing-kafka-broker
+  org: openshift-knative
+  promotion:
+    namespace: openshift
+  repo: eventing-kafka-broker
+  slackChannel: '#knative-eventing-ci'
