--- a/config/serving.yaml
+++ b/config/serving.yaml
@@ -3,8 +3,8 @@ config:
     release-next:
       openShiftVersions:
       - version: "4.14"
-      - version: "4.12"
-        onDemand: true
+      - onDemand: true
+        version: "4.12"
       skipDockerFilesMatches:
       - openshift/ci-operator/knative-perf-images.*
       skipE2EMatches:
@@ -13,23 +13,23 @@ config:
     release-v1.10:
       openShiftVersions:
       - version: "4.14"
-      - version: "4.11"
-        onDemand: true
+      - onDemand: true
+        version: "4.11"
     release-v1.11:
       openShiftVersions:
       - version: "4.14"
-      - version: "4.12"
-        onDemand: true
+      - onDemand: true
+        version: "4.12"
     release-v1.12:
       openShiftVersions:
       - version: "4.14"
-      - version: "4.12"
-        onDemand: true
+      - onDemand: true
+        version: "4.12"
     release-v1.13:
       openShiftVersions:
       - version: "4.14"
-      - version: "4.12"
-        onDemand: true
+      - onDemand: true
+        version: "4.12"
 repositories:
 - dockerfiles:
     matches:
