Reduce periodic testing for released versions
Also remove OCP 4.11 completely as it's not supported anymore.

--- a/config/eventing-kafka-broker.yaml
+++ b/config/eventing-kafka-broker.yaml
@@ -7,12 +7,12 @@ config:
         version: "4.12"
     release-v1.10:
       openShiftVersions:
-      - version: "4.14"
-      - onDemand: true
-        version: "4.11"
+      - skipCron: true
+        version: "4.14"
     release-v1.11:
       openShiftVersions:
-      - version: "4.14"
+      - skipCron: true
+        version: "4.14"
       - onDemand: true
         version: "4.12"
     release-v1.12:
