--- a/config/serving-net-istio.yaml
+++ b/config/serving-net-istio.yaml
@@ -3,12 +3,12 @@ config:
     release-v1.10:
       openShiftVersions:
       - version: "4.14"
-      - onDemand: true
-        version: "4.11"
     release-v1.11:
       openShiftVersions:
-      - version: "4.14"
+      - skipCron: true
+        version: "4.14"
       - onDemand: true
+        skipCron: true
         version: "4.12"
     release-v1.12:
       openShiftVersions:
