Add CI for 1.14

--- a/config/serving-net-kourier.yaml
+++ b/config/serving-net-kourier.yaml
@@ -16,6 +16,11 @@ config:
       - version: "4.15"
       - onDemand: true
         version: "4.12"
+    release-v1.14:
+      openShiftVersions:
+        - version: "4.15"
+        - onDemand: true
+          version: "4.12"
 repositories:
 - dockerfiles: {}
   ignoreConfigs: {}
