--- a/config/serving.yaml
+++ b/config/serving.yaml
@@ -27,7 +27,12 @@ config:
       - onDemand: true
         version: "4.12"
       skipE2EMatches:
-        - .*e2e-tls
+        - .*e2e-tls$
+    release-v1.14:
+      openShiftVersions:
+        - version: "4.15"
+        - onDemand: true
+          version: "4.12"
 repositories:
 - dockerfiles:
     matches:
