make discover-branches ARGS="--config config/"
Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>

--- a/config/eventing.yaml
+++ b/config/eventing.yaml
@@ -20,11 +20,10 @@ config:
       - version: "4.15"
       - onDemand: true
         version: "4.12"
-    release-v1.13:
+    release-v1.14:
       openShiftVersions:
       - version: "4.15"
-      - onDemand: true
-        version: "4.12"
+      - version: "4.12"
 repositories:
 - dockerfiles: {}
   e2e:
