--- a/config/kn-event.yaml
+++ b/config/kn-event.yaml
@@ -18,6 +18,10 @@ repositories:
   - org: openshift-knative
     repo: kn-plugin-event
     imagePrefix: client-plugin-event
+    binaryBuildCommands: |-
+      export HOME=/tmp
+      export TEST_IMAGES_DIR=/usr/bin
+      ./mage build
     imageNameOverrides:
       kn-event-sender: sender
     promotion:
@@ -28,37 +32,19 @@ repositories:
     resources:
       '*':
         limits:
-          memory: 6Gi
+          memory: 8Gi
         requests:
           cpu: 100m
           memory: 200Mi
     tests:
       - as: unit
-        commands: make unit
+        commands: ./mage test
         container:
           from: src
-#      - as: e2e
-#        cluster_claim:
-#          architecture: amd64
-#          cloud: aws
-#          owner: serverless-ci
-#          product: ocp
-#          timeout: 2h30m0s
-#          version: "4.15"
-#        steps:
-#          test:
-#            - as: test
-#              commands: openshift/e2e-tests.sh
-#              dependencies:
-#                - env: TEST_IMAGES_EVENTSHUB
-#                  name: client-plugin-event-test-eventshub
-#                - env: TEST_IMAGES_WATHOLA_FORWARDER
-#                  name: client-plugin-event-test-wathola-forwarder
-#                - env: IMAGES_KN_EVENT_SENDER
-#                  name: client-plugin-event-sender
-#              from: src
-#              resources:
-#                requests:
-#                  cpu: 100m
-#              timeout: 30m0s
-#          workflow: generic-claim
+        steps:
+          env:
+            HOME: /tmp
+    e2e:
+      - name: e2e
+        command: openshift/e2e-tests.sh
+        timeout: 30m0s
