Add default excludes for discovered images

--- a/config/kn-event.yaml
+++ b/config/kn-event.yaml
@@ -31,7 +31,7 @@ repositories:
     sharedInputs:
       bin:
         paths:
-          - destination_dir: ./
+          - destination_dir: .
             source_path: /var/build/bin
     slackChannel: '#knative-client'
     resources:
